fixing some bugs in lawyer related endpoints
